maquetado del diseño de home junto con el footer

--- a/src-scss/partials/_variables.scss
+++ b/src-scss/partials/_variables.scss
@@ -1,2 +1,12 @@
 /*Fuentes del archivo*/
 $fuente-titulos: 'Montserrat', sans-serif;
+$fuente-roboto: 'Roboto', sans-serif;
+
+/*Tamaño fuentes*/
+$size-titulos: 1.5625rem; /*25px*/
+$size-16px: 1rem;
+$size-14px: 0.875rem;
+
+/*Colores generales*/
+$color-azul: #572EE5;
+$color-verde: #50E3C2;
