--- a/src-scss/styles.scss
+++ b/src-scss/styles.scss
@@ -3,5 +3,6 @@
 
 /*Estilos particulares*/
 @import 'partials/header';
+@import 'partials/home';
 @import 'partials/body';
 @import 'partials/footer';
