--- a/src-scss/partials/_header.scss
+++ b/src-scss/partials/_header.scss
@@ -21,6 +21,7 @@ nav .principal-nav ul {
     }
 }
 
+/*Inicio estilos menú para mobile*/
 .principal-nav {
     input {
        &:checked ~ ul{ 
@@ -50,37 +51,15 @@ header nav .principal-nav input {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 /******ESTILOS GENERALES HEADER********/
 .principal-nav input ul {
     display: block;
+    
 }
 
 .clean-list li {
     display: inline-block;
 }
-
-// .header {
-//     max-width: 1200px;
-//     margin: 0 auto;
-//     padding: 20px;
-// }
-
-// .header {
-//     display: flex;
-//     justify-content: space-between;
-// }
-
 
 ul li {
     padding: 15px;
@@ -88,14 +67,40 @@ ul li {
     font-size: 0.9375rem;
 }
 
-// .principal-nav {
-//     background-color: rgba(87,46,229,0.90);   
-// }
-
 .header ul li a {
     color: white;
 }
 
+@media screen and (min-width: 1000px){
+    header nav .principal-nav input {
+        display: none;
+    }
+
+    .header nav .principal-nav img {
+        display: none;
+    }
+
+    .header {
+        max-width: 1150px;
+        margin: 0 auto;
+    }
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    // .header img {
+    //     background: url(../dist/assets/logo-desktop.svg);
+    // }
+
+    .header ul li a{
+        text-transform: uppercase;
+        font-size: 0.8125rem;
+        color: $color-azul;
+        font-weight: bold;
+    }
+}
 
 
 
