--- a/src-scss/styles.scss
+++ b/src-scss/styles.scss
@@ -2,6 +2,7 @@
 @import 'partials/variables';
 
 /*Estilos particulares*/
+@import 'partials/dark_mode';
 @import 'partials/header';
 @import 'partials/home';
 @import 'partials/body';
