--- a/src-scss/partials/_variables.scss
+++ b/src-scss/partials/_variables.scss
@@ -6,6 +6,7 @@ $fuente-roboto: 'Roboto', sans-serif;
 $size-titulos: 1.5625rem; /*25px*/
 $size-16px: 1rem;
 $size-14px: 0.875rem;
+$size-35px: 2.1875rem; 
 
 /*Colores generales*/
 $color-azul: #572EE5;
