inicio de estilos del footer para desktop

--- a/src-scss/partials/_footer.scss
+++ b/src-scss/partials/_footer.scss
@@ -8,3 +8,25 @@
 .footer div {
     padding: 24px 0 47px 0;
 }
+
+@media screen and (min-width: 1000px){
+    .footer {
+        padding-bottom: 40px;
+        display: flex;
+        align-items: center;
+    }
+
+    .footer div {
+        padding: 0;
+    }
+
+    .footer .parrafo-compartir {
+        position: relative;
+        right: 50px;
+    }
+
+    .footer .redesSociales {
+        position: relative;
+        right: 350px;
+    }
+}
