puse el modo dark, funciona solo para desktop, se trabajará mas en ello, se creó carpeta JS solo para código modo dark

--- a/src-scss/styles.scss
+++ b/src-scss/styles.scss
@@ -2,7 +2,7 @@
 @import 'partials/variables';
 
 /*Estilos particulares*/
-@import 'partials/dark_mode';
+@import 'partials/darkmode';
 @import 'partials/header';
 @import 'partials/home';
 @import 'partials/body';
