--- a/src-scss/partials/_header.scss
+++ b/src-scss/partials/_header.scss
@@ -24,16 +24,26 @@ nav .principal-nav ul {
     nav .principal-nav ul {
         display: none;
     }
+
+/*Desaparición de imagen para crear gifos*/
+    .header .img_crear {
+        display: none;
+    }
 }
 
 /*Inicio estilos menú para mobile*/
+.barra_arriba {
+    width: 100%;
+    height: 5px;
+    background-color: $color-azul;
+}
+
 .principal-nav {
     input {
        &:checked ~ ul{ 
             background-color: rgba(87,46,229,0.90); 
             display: flex;
             flex-direction: column;
-            align-items: center;
             height: 540px;
             //width: 250px;
            //transform: translateX(0);
@@ -57,6 +67,10 @@ header nav .principal-nav input {
 
 
 /******ESTILOS GENERALES HEADER********/
+.header {
+    padding: 30px 0;
+}
+
 .principal-nav input ul {
     display: block;
     
@@ -88,21 +102,17 @@ ul li {
     .header {
         max-width: 1400px;
         margin: 0 auto;
-    }
-
-    .header {
         display: flex;
     }
 
-    // .header img {
-    //     background: url(../dist/assets/logo-desktop.svg);
-    // }
 
     .header ul li a{
         text-transform: uppercase;
         font-size: 0.8125rem;
         color: $color-azul;
         font-weight: bold;
+        position: relative;
+        left: 250px;
     }
 }
 
