--- a/src-scss/partials/_home.scss
+++ b/src-scss/partials/_home.scss
@@ -85,6 +85,25 @@ div.trending {
     color: black;
 }
 
+// carousel
+
+.gifs-recomendados .contenedor-principal-carousel {
+    display: flex;
+    align-items: center;
+}
+
+.gifs-recomendados .contenedor-principal-carousel .flecha-izquierda,
+.gifs-recomendados .contenedor-principal-carousel .flecha-derecha {
+    border: none;
+}
+
+.gifs-recomendados .contenedor-principal-carousel .flecha-izquierda {
+    left: 0;
+}
+.gifs-recomendados .contenedor-principal-carousel .flecha-derecha {
+    right: 0;
+}
+
 @media screen and (min-width: 1000px){
     .section1 h1 {
         font-size: $size-35px;
