continuación de carousel solo con css

--- a/src-scss/partials/_home.scss
+++ b/src-scss/partials/_home.scss
@@ -104,6 +104,36 @@ div.trending {
     right: 0;
 }
 
+/*Carousel*/
+
+.gifs-recomendados .contenedor-principal-carousel {
+    width: 100%;
+    padding: 20px 0;
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
+
+.gifs-recomendados .contenedor-principal-carousel .carousel {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.gifs-recomendados .contenedor-principal-carousel .carousel div img {
+    min-width: 20%;
+    width: 100%;
+    vertical-align: top;
+}
+
+.gifs-recomendados .carousel div    :hover {
+    transform: scale(1.2);
+    background: purple;
+}
+
+.contenedor {
+    width: 90%;
+    margin: auto;
+}
+
 @media screen and (min-width: 1000px){
     .section1 h1 {
         font-size: $size-35px;
